--- a/OneTeleport/Packages/manifest.json
+++ b/OneTeleport/Packages/manifest.json
@@ -43,5 +43,11 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
+  },
+  "lock": {
+    "com.unity.2d.tilemap.extras": {
+      "hash": "cc25c1f146525e35f7f23f786193a8a05d5f33f6",
+      "revision": "master"
+    }
   }
 }
