--- a/OneTeleport/Packages/manifest.json
+++ b/OneTeleport/Packages/manifest.json
@@ -5,12 +5,11 @@
     "com.unity.2d.tilemap.extras": "https://github.com/Unity-Technologies/2d-extras.git#master",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ext.nunit": "1.0.0",
-    "com.unity.ide.rider": "1.0.8",
-    "com.unity.ide.vscode": "1.0.7",
-    "com.unity.package-manager-ui": "2.2.0",
-    "com.unity.test-framework": "1.0.13",
+    "com.unity.ide.rider": "1.1.4",
+    "com.unity.ide.vscode": "1.1.4",
+    "com.unity.test-framework": "1.1.11",
     "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.1.0",
+    "com.unity.timeline": "1.2.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
@@ -46,8 +45,8 @@
   },
   "lock": {
     "com.unity.2d.tilemap.extras": {
-      "hash": "cc25c1f146525e35f7f23f786193a8a05d5f33f6",
-      "revision": "master"
+      "revision": "master",
+      "hash": "cc25c1f146525e35f7f23f786193a8a05d5f33f6"
     }
   }
 }
